Update MatchMakingService, update AscendencyPlayer class